deployment/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amazon
---
apiVersion: v1
kind: Namespace
metadata:
  name: flipkart
