deployment/amazon-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amazon
  namespace: amazon
spec:
  replicas: 2
  selector:
    matchLabels:
      app: amazon
  template:
    metadata:
      labels:
        app: amazon
    spec:
      containers:
      - name: amazon
        image: elsonpulikkan/estore-amazon:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: amazon
  namespace: amazon
spec:
  type: ClusterIP
  selector:
    app: amazon
  ports:
  - port: 80
    targetPort: 80
