deployment/apps-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amazon-ingress
  namespace: amazon-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: apps-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:708011889453:certificate/2b42a0f3-dc8a-4181-a4a6-f4ac8cc56f6e
spec:
  ingressClassName: alb
  rules:
    - host: amazon.lucintelsolutions.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amazon-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flipkart-ingress
  namespace: flipkart-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: apps-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:708011889453:certificate/2b42a0f3-dc8a-4181-a4a6-f4ac8cc56f6e
spec:
  ingressClassName: alb
  rules:
    - host: flipkart.lucintelsolutions.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flipkart-svc
                port:
                  number: 80
