deployment/shared-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: amazon
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:648890865579:certificate/f5d7e589-640f-4191-a0f9-93933545b7d5
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: shared-alb
spec:
  ingressClassName: alb
  rules:
  - host: amazon.lucintelsolutions.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: amazon
            port:
              number: 80
  - host: flipkart.lucintelsolutions.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flipkart
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flipkart-ingress
  namespace: flipkart
  annotations:
    alb.ingress.kubernetes.io/group.name: shared-alb
spec:
  ingressClassName: alb
  rules:
  - host: flipkart.lucintelsolutions.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flipkart
            port:
              number: 80
